servicemesh/07_fault-injection/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
    - backend.training.svc.cluster.local
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: backend.training.svc.cluster.local
            subset: v1
      # fault:
      #   abort:
      #     httpStatus: 500
      #     percentage:
      #       value: 100
      #   delay:
      #     fixedDelay: 3s
      #     percentage:
      #       value: 100

            # TODO remove destinationrule when it is not needed

            # TODO remove gateway everywhere - yes I need it it looks

            # TODO do I need the port in here? everywhere? do not need at all as it looks
